syntax = "proto3";

package admin;

service AdminService {
  rpc CreateNews(CreateNewsRequest) returns (NewsResponse);
  rpc CreateAnnouncement(CreateAnnouncementRequest) returns (AnnouncementResponse);
}

message CreateNewsRequest {
  string title = 1;
  string content = 2;
}

message CreateAnnouncementRequest {
  string title = 1;
  string content = 2;
}

message News {
  string id = 1;
  string title = 2;
  string content = 3;
  string created_at = 4;
}

message Announcement {
  string id = 1;
  string title = 2;
  string content = 3;
  string created_at = 4;
}

message NewsResponse {
  News news = 1;
}

message AnnouncementResponse {
  Announcement announcement = 1;
}
